[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sounds/Mobile - Pac-Man iPod - Sound Effects/die.wav" type="AudioStream" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://Graphics/NicePng_pacman-pixel-png_1842600.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1.25, 1.25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 1, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 21, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 41, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 61, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 81, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 101, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 121, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 141, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 161, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 181, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 201, 242, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 41, 1, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1, 1, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 21, 1, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 15 ), null, null, null ],
"loop": false,
"name": "Die",
"speed": 7.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "Moving",
"speed": 30.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "Ready!",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "Still",
"speed": 1.0
} ]

[node name="Player" type="Area2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Still"
playing = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
